# dekinai

./: .editorconfig  .env.example  .gitignore  Cargo.toml  LICENSE  README.md
migrations/: 20210320220827_uploads.sql
src/: cli.rs  cli.yaml  config.rs  db.rs  lib.rs  main.rs  route.rs  util.rs
