[package]
name = "dekinai"
version = "1.0.0"
authors = ["Johann Rekowski <johann.rekowski@gmail.com>"]
edition = "2018"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-multipart = "0.4.0-beta.5"
actix-web = { version = "4.0.0-beta.8", default-features = false }
async-recursion = "0.3"
clap = { git = "https://github.com/clap-rs/clap", default-features = false, features = ["regex", "std", "suggestions", "wrap_help", "yaml"] }
derive_more = { version = "0.99", default-features = false, features = ["display", "error"] }
futures-util = { version = "0.3", default-features = false }
num_cpus = "1"
pbkdf2 = "0.8"
rand = "0.8"
sqlx = { version = "0.5", features = ["runtime-actix-native-tls", "sqlite"] }
tokio = { version = "1", features = ["fs"] }

[profile.release]
lto = true
codegen-units = 1
