[package]
name = "dekinai"
description = "Dekinai is a simple and minimalistic file uploading API.\nIt provides the bare minimum feature set for file hosting services, while also being fast and portable."
version = "1.1.0"
authors = ["Johann Rekowski <johann.rekowski@gmail.com>"]
license = "MIT"
edition = "2021"
rust-version = "1.59"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-multipart = "0.4"
actix-web = { version = "4", default-features = false, features = ["macros"] }
async-recursion = "1"
clap = { version = "3", features = ["cargo", "env", "wrap_help"] }
derive_more = { version = "0.99", default-features = false, features = ["display", "error"] }
futures-util = { version = "0.3", default-features = false }
num_cpus = "1"
pbkdf2 = "0.11"
rand = "0.8"
sqlx = { version = "0.5", features = ["runtime-actix-native-tls", "sqlite"] }
tokio = { version = "1", features = ["fs"] }

[profile.release]
codegen-units = 1
lto = true
strip = true
